# haskell-arrow-interchange

./: .gitignore  CHANGELOG.md  README.md  arrow-interchange.cabal  cabal.project  cabal.vex.project  cabal.vext.project  haskell-arrow-interchange.cabal  record-batch-message.json
app/: ArrowFooterJsonToBinary.hs  ArrowMessageJsonToBinary.hs  CsvToArrow.hs
arrow-interchange-common/: arrow-interchange-common.cabal
arrow-interchange-common/app/: ArrowFooterJsonToBinary.hs  ArrowMessageJsonToBinary.hs
arrow-interchange-common/arrow-format/: File.fbs  Message.fbs  Schema.fbs  SparseTensor.fbs  Tensor.fbs
arrow-interchange-common/src/: ArrowBuilderNoColumn.hs  ArrowFile.hs  ArrowMessage.hs  ArrowSchema.hs  ArrowTemplateHaskell.hs
arrow-interchange-common/src/Arrow/Builder/: Raw.hs
arrow-interchange-vex/: arrow-interchange-vex.cabal
arrow-interchange-vex/app/: ArrowFooterJsonToBinary.hs  ArrowMessageJsonToBinary.hs  CsvToArrow.hs
arrow-interchange-vex/src/: ArrowBuilder.hs
arrow-interchange-vex/src/Arrow/: Vex.hs
arrow-interchange-vex/src/Arrow/Builder/: Vex.hs
arrow-interchange-vext/: arrow-interchange-vext.cabal
arrow-interchange-vext/src/: ArrowBuilder.hs  ArrowParser.hs
arrow-interchange-vext/src/Arrow/: Vext.hs
arrow-interchange-vext/src/Arrow/Builder/: Vext.hs
arrow-interchange-vext/src/Arrow/Vext/: VariableBinaryUtf8.hs
arrow-interchange-vext/test/: Main.hs
examples/: firewall.arrow  shapes.arrow  traffic-01.arrow  traffic-02.arrow
golden/expected/: footer-001.json  footer-002.json  footer-003.json  message-001.json  message-002.json  message-003.json  message-004.json
golden/input/: footer-001.json  footer-002.json  footer-003.json  message-001.json  message-002.json  message-003.json  message-004.json
samples/: age_height.csv  ages.csv  hobbies.csv  monarchs.csv  network_quintuples.csv  opt_age_height.csv  people.csv
scripts/: initialize-venv  runtests  runvalidate  validate
src/: ArrowBuilder.hs  ArrowBuilderNoColumn.hs  ArrowMessage.hs  ArrowSchema.hs
src-vext/: ArrowBuilder.hs
