cabal-version: 3.4
name: arrow-interchange-common
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

library
  ghc-options: -Wall -O2
  exposed-modules:
    ArrowBuilderNoColumn
    ArrowFile
    ArrowMessage
    ArrowSchema
  build-depends:
    , array-builder >=0.1.3
    , base >=4.16
    , byte-order >=0.1.3
    , bytebuild >=0.3.12
    , byteslice
    , byteslice >=0.2.9
    , bytestring >=0.11.4
    , contiguous >=0.6
    , flatbuffers-builder
    , lz4-bytes >=0.1.0.2
    , natural-arithmetic
    , primitive >=0.8
    , run-st >=0.1.1
    , text >=2.0
    , text-short
  hs-source-dirs: src
  default-language: GHC2021
