cabal-version: 3.4
name: arrow-interchange-common
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
category: Data
build-type: Simple

library
  ghc-options: -Wall -O2
  exposed-modules:
    Arrow.Builder.Raw
  other-modules:
    ArrowFile
    ArrowMessage
    ArrowSchema
  build-depends:
    , array-builder >=0.1.3
    , base >=4.16
    , byte-order >=0.1.3
    , bytebuild >=0.3.12
    , byteslice
    , byteslice >=0.2.9
    , bytestring >=0.11.4
    , contiguous >=0.6
    , flatbuffers-builder
    , lz4-bytes >=0.1.0.2
    , natural-arithmetic
    , primitive >=0.8
    , primitive-unlifted >=2.2
    , run-st >=0.1.1
    , text >=2.0
    , text-short
  hs-source-dirs: src
  default-language: GHC2021

executable arrow-footer-json-to-binary
  default-language: GHC2021
  hs-source-dirs: app
  main-is: ArrowFooterJsonToBinary.hs
  ghc-options: -Wall -O2
  build-depends:
    , aeson
    , array-builder
    , arrow-interchange-common
    , base >=4.16
    , byteslice >=0.2.9
    , flatbuffers-builder
    , natural-arithmetic >=0.2.1
    , primitive >=0.8
    , primitive-unlifted >=0.1.3
    , text >=2.0

executable arrow-message-json-to-binary
  default-language: GHC2021
  hs-source-dirs: app
  main-is: ArrowMessageJsonToBinary.hs
  build-depends:
    , aeson
    , array-builder
    , arrow-interchange-common
    , base >=4.16
    , byteslice >=0.2.9
    , flatbuffers-builder
    , natural-arithmetic >=0.2.1
    , primitive >=0.8
    , primitive-unlifted >=0.1.3
    , text >=2.0
