cabal-version:      3.4
name:               arrow-interchange-vext
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         andrew.thaddeus@gmail.com
category:           Data
build-type:         Simple

library
  ghc-options: -Wall -O2
  exposed-modules:
    Arrow.Builder.Vext
  build-depends:
    , array-builder
    , arrow-interchange-common
    , base >=4.16
    , byte-order >=0.1.3
    , bytebuild >=0.3.12
    , byteslice >=0.2.9
    , bytestring >=0.11.4
    , contiguous >=0.6
    , flatbuffers-builder
    , natural-arithmetic >=0.2
    , primitive >=0.8
    , primitive-unlifted >=2.2
    , run-st >=0.1.1
    , text >=2.0
    , text-short
    , unlifted >=0.2.1
    , vext >=0.1.1
  hs-source-dirs: src
  default-language: GHC2021
