cabal-version:      3.4
name:               arrow-interchange-vext
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         andrew.thaddeus@gmail.com
category:           Data
build-type:         Simple

library
  ghc-options: -Wall -O2
  other-modules:
    ArrowParser
  exposed-modules:
    Arrow.Builder.Vext
  build-depends:
    , array-builder
    , arrow-interchange-common
    , base >=4.16
    , byte-order >=0.1.3
    , bytebuild >=0.3.12
    , byteslice >=0.2.9
    , bytestring >=0.11.4
    , contiguous >=0.6.4.2
    , flatbuffers-builder >=1.0
    , flatbuffers-parser >=0.1
    , lz4-bytes >=0.1.2
    , natural-arithmetic >=0.2
    , primitive >=0.8
    , primitive-unlifted >=2.2
    , run-st >=0.1.1
    , text >=2.0
    , text-short
    , unlifted >=0.2.1
    , vext >=0.1.4
  hs-source-dirs: src
  default-language: GHC2021

test-suite test
  ghc-options: -Wall -O2
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base >=4.16 
    , arrow-interchange-vext
    , bytesmith >=0.3.9
    , byteslice >=0.2.9
    , primitive >=0.7
    , bytebuild >=0.3.12
    , bytestring >=0.11
    , array-builder >=0.1.2
    , text >=2.0
    , vext >=0.1.1
    , contiguous >=0.6
    , unlifted >=0.2.2
    , natural-arithmetic
